updated vivado project

--- a/Youssef/vivado project/RV32I_CPU/RV32I_CPU.sim/sim_1/behav/xsim/xsim.dir/rapid_cpu_testbench_behav/xsimSettings.ini
+++ b/Youssef/vivado project/RV32I_CPU/RV32I_CPU.sim/sim_1/behav/xsim/xsim.dir/rapid_cpu_testbench_behav/xsimSettings.ini
@@ -1,8 +1,8 @@
 [General]
-ARRAY_DISPLAY_LIMIT=1024
+ARRAY_DISPLAY_LIMIT=512
 RADIX=hex
 TIME_UNIT=ns
-TRACE_LIMIT=65536
+TRACE_LIMIT=2147483647
 VHDL_ENTITY_SCOPE_FILTER=true
 VHDL_PACKAGE_SCOPE_FILTER=false
 VHDL_BLOCK_SCOPE_FILTER=true
@@ -25,12 +25,12 @@ INOUT_PROTOINST_FILTER=true
 INTERNAL_PROTOINST_FILTER=true
 CONSTANT_PROTOINST_FILTER=true
 VARIABLE_PROTOINST_FILTER=true
-SCOPE_NAME_COLUMN_WIDTH=175
+SCOPE_NAME_COLUMN_WIDTH=189
 SCOPE_DESIGN_UNIT_COLUMN_WIDTH=135
-SCOPE_BLOCK_TYPE_COLUMN_WIDTH=100
-OBJECT_NAME_COLUMN_WIDTH=182
+SCOPE_BLOCK_TYPE_COLUMN_WIDTH=107
+OBJECT_NAME_COLUMN_WIDTH=172
 OBJECT_VALUE_COLUMN_WIDTH=322
-OBJECT_DATA_TYPE_COLUMN_WIDTH=73
+OBJECT_DATA_TYPE_COLUMN_WIDTH=90
 PROCESS_NAME_COLUMN_WIDTH=75
 PROCESS_TYPE_COLUMN_WIDTH=75
 FRAME_INDEX_COLUMN_WIDTH=75
@@ -48,3 +48,39 @@ INOUT_LOCAL_FILTER=1
 INTERNAL_LOCAL_FILTER=1
 CONSTANT_LOCAL_FILTER=1
 VARIABLE_LOCAL_FILTER=1
+[Object Radixes]
+RADIX_0=dec /rapid_cpu_testbench/reg_file/register_file[16];
+RADIX_1=dec /rapid_cpu_testbench/reg_file/register_file[15];
+RADIX_2=dec /rapid_cpu_testbench/reg_file/register_file[0];
+RADIX_3=dec /rapid_cpu_testbench/reg_file/register_file[1];
+RADIX_4=dec /rapid_cpu_testbench/reg_file/register_file[2];
+RADIX_5=dec /rapid_cpu_testbench/reg_file/register_file[3];
+RADIX_6=dec /rapid_cpu_testbench/reg_file/register_file[4];
+RADIX_7=dec /rapid_cpu_testbench/reg_file/register_file[5];
+RADIX_8=dec /rapid_cpu_testbench/reg_file/register_file[6];
+RADIX_9=dec /rapid_cpu_testbench/reg_file/register_file[9];
+RADIX_10=dec /rapid_cpu_testbench/reg_file/register_file[10];
+RADIX_11=dec /rapid_cpu_testbench/reg_file/register_file[18];
+RADIX_12=dec /rapid_cpu_testbench/reg_file/register_file[19];
+RADIX_13=dec /rapid_cpu_testbench/reg_file/register_file[21];
+RADIX_14=dec /rapid_cpu_testbench/reg_file/register_file[20];
+RADIX_15=dec /rapid_cpu_testbench/reg_file/register_file[23];
+RADIX_16=dec /rapid_cpu_testbench/reg_file/register_file[22];
+RADIX_17=dec /rapid_cpu_testbench/reg_file/register_file[24];
+RADIX_18=dec /rapid_cpu_testbench/reg_file/register_file[25];
+RADIX_19=dec /rapid_cpu_testbench/reg_file/register_file[26];
+RADIX_20=dec /rapid_cpu_testbench/reg_file/register_file[28];
+RADIX_21=dec /rapid_cpu_testbench/reg_file/register_file[27];
+RADIX_22=dec /rapid_cpu_testbench/reg_file/register_file[30];
+RADIX_23=dec /rapid_cpu_testbench/reg_file/register_file[29];
+RADIX_24=dec /rapid_cpu_testbench/reg_file/register_file[31];
+RADIX_25=dec /rapid_cpu_testbench/reg_file/register_file[13];
+RADIX_26=dec /rapid_cpu_testbench/reg_file/register_file[7];
+RADIX_27=dec /rapid_cpu_testbench/reg_file/register_file[8];
+RADIX_28=dec /rapid_cpu_testbench/reg_file/register_file[17];
+RADIX_29=dec /rapid_cpu_testbench/reg_file/register_file[14];
+RADIX_30=dec /rapid_cpu_testbench/ex_stage/i_imm;
+RADIX_31=dec /rapid_cpu_testbench/ex_stage/i_rs1;
+RADIX_32=dec /rapid_cpu_testbench/ex_stage/i_rs2;
+RADIX_33=dec /rapid_cpu_testbench/reg_file/register_file[12];
+RADIX_34=dec /rapid_cpu_testbench/reg_file/register_file[11];
