--- a/Youssef/NOVA_Core/SystemVerilog/vivado-project/rapid-x/rapid-x.sim/sim_1/behav/xsim/xsim.dir/rapid_x_testbench_behav/xsimSettings.ini
+++ b/Youssef/NOVA_Core/SystemVerilog/vivado-project/rapid-x/rapid-x.sim/sim_1/behav/xsim/xsim.dir/rapid_x_testbench_behav/xsimSettings.ini
@@ -1,8 +1,8 @@
 [General]
-ARRAY_DISPLAY_LIMIT=512
+ARRAY_DISPLAY_LIMIT=1024
 RADIX=hex
 TIME_UNIT=ns
-TRACE_LIMIT=2147483647
+TRACE_LIMIT=65536
 VHDL_ENTITY_SCOPE_FILTER=true
 VHDL_PACKAGE_SCOPE_FILTER=false
 VHDL_BLOCK_SCOPE_FILTER=true
@@ -29,7 +29,7 @@ SCOPE_NAME_COLUMN_WIDTH=203
 SCOPE_DESIGN_UNIT_COLUMN_WIDTH=100
 SCOPE_BLOCK_TYPE_COLUMN_WIDTH=120
 OBJECT_NAME_COLUMN_WIDTH=179
-OBJECT_VALUE_COLUMN_WIDTH=1904
+OBJECT_VALUE_COLUMN_WIDTH=1902
 OBJECT_DATA_TYPE_COLUMN_WIDTH=73
 PROCESS_NAME_COLUMN_WIDTH=0
 PROCESS_TYPE_COLUMN_WIDTH=0
@@ -49,35 +49,35 @@ INTERNAL_LOCAL_FILTER=1
 CONSTANT_LOCAL_FILTER=1
 VARIABLE_LOCAL_FILTER=1
 [Object Radixes]
-RADIX_0=dec /rapid_x_testbench/rapid_x/reg_file/register_file[15];
-RADIX_1=dec /rapid_x_testbench/rapid_x/reg_file/register_file[16];
-RADIX_2=dec /rapid_x_testbench/rapid_x/reg_file/register_file[17];
-RADIX_3=dec /rapid_x_testbench/rapid_x/reg_file/register_file[18];
-RADIX_4=dec /rapid_x_testbench/rapid_x/reg_file/register_file[5];
-RADIX_5=hex /rapid_x_testbench/rapid_x/reg_file/register_file[9];
-RADIX_6=dec /rapid_x_testbench/rapid_x/reg_file/register_file[13];
-RADIX_7=dec /rapid_x_testbench/rapid_x/reg_file/register_file[0];
-RADIX_8=dec /rapid_x_testbench/rapid_x/reg_file/register_file[22];
-RADIX_9=dec /rapid_x_testbench/rapid_x/reg_file/register_file[19];
-RADIX_10=dec /rapid_x_testbench/rapid_x/reg_file/register_file[23];
-RADIX_11=dec /rapid_x_testbench/rapid_x/reg_file/register_file[4];
-RADIX_12=dec /rapid_x_testbench/rapid_x/reg_file/register_file[20];
-RADIX_13=dec /rapid_x_testbench/rapid_x/reg_file/register_file[2];
-RADIX_14=dec /rapid_x_testbench/rapid_x/reg_file/register_file[14];
-RADIX_15=dec /rapid_x_testbench/rapid_x/reg_file/register_file[25];
-RADIX_16=hex /rapid_x_testbench/rapid_x/reg_file/register_file[8];
-RADIX_17=dec /rapid_x_testbench/rapid_x/reg_file/register_file[29];
-RADIX_18=dec /rapid_x_testbench/rapid_x/reg_file/register_file[24];
-RADIX_19=dec /rapid_x_testbench/rapid_x/reg_file/register_file[27];
-RADIX_20=bin /rapid_x_testbench/rapid_x/reg_file/register_file[30];
-RADIX_21=dec /rapid_x_testbench/rapid_x/reg_file/register_file[28];
-RADIX_22=dec /rapid_x_testbench/rapid_x/reg_file/register_file[31];
-RADIX_23=dec /rapid_x_testbench/rapid_x/reg_file/register_file[1];
-RADIX_24=dec /rapid_x_testbench/rapid_x/reg_file/register_file[6];
-RADIX_25=dec /rapid_x_testbench/rapid_x/reg_file/register_file[3];
-RADIX_26=dec /rapid_x_testbench/rapid_x/reg_file/register_file[21];
-RADIX_27=dec /rapid_x_testbench/rapid_x/reg_file/register_file[11];
-RADIX_28=dec /rapid_x_testbench/rapid_x/reg_file/register_file[10];
-RADIX_29=dec /rapid_x_testbench/rapid_x/reg_file/register_file[26];
-RADIX_30=dec /rapid_x_testbench/rapid_x/reg_file/register_file[7];
-RADIX_31=dec /rapid_x_testbench/rapid_x/reg_file/register_file[12];
+RADIX_0=dec /rapid_x_testbench/rapid_x/reg_file/register_file[4];
+RADIX_1=dec /rapid_x_testbench/rapid_x/reg_file/register_file[2];
+RADIX_2=dec /rapid_x_testbench/rapid_x/reg_file/register_file[3];
+RADIX_3=dec /rapid_x_testbench/rapid_x/reg_file/register_file[0];
+RADIX_4=dec /rapid_x_testbench/rapid_x/reg_file/register_file[1];
+RADIX_5=dec /rapid_x_testbench/rapid_x/reg_file/register_file[5];
+RADIX_6=dec /rapid_x_testbench/rapid_x/reg_file/register_file[6];
+RADIX_7=dec /rapid_x_testbench/rapid_x/reg_file/register_file[8];
+RADIX_8=dec /rapid_x_testbench/rapid_x/reg_file/register_file[7];
+RADIX_9=dec /rapid_x_testbench/rapid_x/reg_file/register_file[10];
+RADIX_10=dec /rapid_x_testbench/rapid_x/reg_file/register_file[9];
+RADIX_11=dec /rapid_x_testbench/rapid_x/reg_file/register_file[11];
+RADIX_12=dec /rapid_x_testbench/rapid_x/reg_file/register_file[12];
+RADIX_13=dec /rapid_x_testbench/rapid_x/reg_file/register_file[14];
+RADIX_14=dec /rapid_x_testbench/rapid_x/reg_file/register_file[13];
+RADIX_15=dec /rapid_x_testbench/rapid_x/reg_file/register_file[16];
+RADIX_16=dec /rapid_x_testbench/rapid_x/reg_file/register_file[15];
+RADIX_17=dec /rapid_x_testbench/rapid_x/reg_file/register_file[17];
+RADIX_18=dec /rapid_x_testbench/rapid_x/reg_file/register_file[18];
+RADIX_19=dec /rapid_x_testbench/rapid_x/reg_file/register_file[19];
+RADIX_20=dec /rapid_x_testbench/rapid_x/reg_file/register_file[20];
+RADIX_21=dec /rapid_x_testbench/rapid_x/reg_file/register_file[21];
+RADIX_22=dec /rapid_x_testbench/rapid_x/reg_file/register_file[23];
+RADIX_23=dec /rapid_x_testbench/rapid_x/reg_file/register_file[22];
+RADIX_24=dec /rapid_x_testbench/rapid_x/reg_file/register_file[24];
+RADIX_25=dec /rapid_x_testbench/rapid_x/reg_file/register_file[25];
+RADIX_26=dec /rapid_x_testbench/rapid_x/reg_file/register_file[27];
+RADIX_27=dec /rapid_x_testbench/rapid_x/reg_file/register_file[26];
+RADIX_28=dec /rapid_x_testbench/rapid_x/reg_file/register_file[29];
+RADIX_29=dec /rapid_x_testbench/rapid_x/reg_file/register_file[28];
+RADIX_30=dec /rapid_x_testbench/rapid_x/reg_file/register_file[31];
+RADIX_31=dec /rapid_x_testbench/rapid_x/reg_file/register_file[30];
