--- a/RAPID-X Core/vivado-project/rapid-x/rapid-x.sim/sim_1/behav/xsim/xsim.ini
+++ b/RAPID-X Core/vivado-project/rapid-x/rapid-x.sim/sim_1/behav/xsim/xsim.ini
@@ -1,2 +1,2 @@
-uvm=E:/VIVADO/Vivado/2024.1/data/xsim/system_verilog/uvm
+uvm=C:/Xilinx/Vivado/2024.1/data/xsim/system_verilog/uvm
 xil_defaultlib=xsim.dir/xil_defaultlib
