changed compiler flag settings for basys3 soc

--- a/Pablo_Rodriguez/rapidx-software/.devcontainer/Dockerfile
+++ b/Pablo_Rodriguez/rapidx-software/.devcontainer/Dockerfile
@@ -3,7 +3,7 @@ FROM fiveembeddev/riscv_xpack_gcc_dev_env
 USER root
 
 # hexdump, etc
-RUN apt-get update && apt-get install -y bsdmainutils \
+RUN apt-get update && apt-get install -y bsdmainutils xxd \
     && rm -rf /var/lib/apt/lists/*
 
 # Prevents 'This account is currently not available.' error because
