added secondary manual mode for lcd display

--- a/Pablo_Rodriguez/rapidx-software/Makefile
+++ b/Pablo_Rodriguez/rapidx-software/Makefile
@@ -2,6 +2,7 @@ CC      = riscv-none-elf-gcc
 OBJCOPY = riscv-none-elf-objcopy
 CFLAGS  = -Wall -ffreestanding -march=rv32i -g
 LDFLAGS = -nostdlib -Tlinker.lds
+LDLIBS  = -lgcc
  
 all: main.bin64k
 
@@ -16,7 +17,7 @@ main.hex: main.bin
 	hexdump -ve '/4 "%08x\n"' < $< > $@
 
 main.elf: main.c
-	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
 .PHONY: clean
 clean:
